--- a/style.css
+++ b/style.css
@@ -47,27 +47,45 @@
 }
 
   .two-row-one {
+
   border: 5px solid white;
   width:auto;
-  height: 40%;
+  height: 30%;
   margin-bottom: 20px;
   margin-right: 20px;
 }
 
+
   .two-row-two {
     border: 5px solid white;
     width:auto;
-    height: 60%;
+    height: 70%;
     margin-right: 20px;
 }
 
   .three-row-one {
-  border: 5px solid white;
   width:auto;
   height: 70%;
   margin-bottom: 20px;
+  color: #F8F3F0;
+  background:#3C3731 no-repeat fixed;
 
 }
+
+
+.three-row-one h1 {
+  display: block;
+  font-size: 3em;
+  margin-top: 1em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+  color: #F8F3F0;
+  background:#3C3731 no-repeat fixed;
+
+}
+
 
   .three-row-two {
     border: 5px solid white;
