--- a/style.css
+++ b/style.css
@@ -28,9 +28,6 @@
   font-size: x-large;
 
 }
-
-
-
   .one-row-one {
   border: 5px solid white;
   width:auto;
@@ -45,6 +42,7 @@
     height: 65%;
     margin-right: 20px;
 }
+
 
   .two-row-one {
 
@@ -62,6 +60,14 @@
     height: 70%;
     margin-right: 20px;
 }
+
+
+img {
+    display: block;
+    width: 100%;
+    height: 45%;
+}
+
 
   .three-row-one {
   width:auto;
@@ -91,116 +97,40 @@
     border: 5px solid white;
     width:auto;
     height: 30%;
-}
-
-
-
-
-
-
-
-
-
-
-/* }
-.one img {
-  flex:1;
-}
-.one p {
-  flex:1;
-  color: #3C3731;
-  background:#F8F3F0 no-repeat fixed;
-}
-
-.one section{
-    flex:1;
-    color: #F8F3F0;
-    background:#3C3731 no-repeat fixed;
-}
-
-
-
-.three {
-  border: 10px solid white;
-  width: 30%;
-  display: flex;
-  height: 70%;
-}
-
-
-.three p{
-  font-family: 'Supermercado One', cursive;
-  font-size: x-large;
-  color: #F8F3F0;
-  background:#3C3731 no-repeat fixed;
-  flex: 1;
-
-}
-
-
-
-.four{
-  width: 30%;
-  height: 70%;
-  font-family: 'Supermercado One', cursive;
-  font-size: x-large;
-  flex-direction: column;
-  border: 10px solid white;
-  display: flex;
-
-}
-
-
-.four div, .four p {
-  flex:1;
-  color: #3C3731;
-  background:#F8F3F0 no-repeat fixed;
-}
-
-.five {
-  width: 30%;
-  height: 70%;
-  font-family: 'Supermercado One', cursive;
-  font-size: x-large;
-  flex-direction: column;
-  border: 10px solid white;
-  display: flex;
-
-
-
-}
-
-.five img{
-  flex:1;
-}
-.five p{
-  flex:1;
-  color: #3C3731;
-  background:#F8F3F0 no-repeat fixed;
-}
-  }
-
-
-  .six {
-    width: 30%;
-    height: 30%;
-    font-family: 'Supermercado One', cursive;
-    font-size: x-large;
-    flex-direction: column;
-    border: 10px solid white;
-    display: flex;
-
-  }
-
-  .six p {
-    flex:1;
     color: #3C3731;
     background:#F8F3F0 no-repeat fixed;
-    font-family: 'Supermercado One', cursive;
-    font-size: x-large;
-    flex-direction: column;
-    border: 10px solid white;
-  } */
+}
+
+
+.three-row-two h1 {
+  display: block;
+  font-size: 2em;
+  margin-top: 2em;
+  margin-bottom: .50em;
+  margin-left: 3em;
+  margin-right: 3em;
+  font-weight: bold;
+  color: #3C3731;
+  background:#F8F3F0 no-repeat fixed;
+
+}
+
+
+.three-row-two h3 {
+  display: block;
+  font-size: 1em;
+  margin-top: .50em;
+  margin-bottom: 1em;
+  margin-left: 3em;
+  margin-right: 3em;
+  font-weight: bold;
+  color: #3C3731;
+  background:#F8F3F0 no-repeat fixed;
+
+
+}
+
+
 
 
 
