--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 
-* {
+body {
   background: linear-gradient(#FFFFE7, 	#A67F59);
   background-repeat: no-repeat;
   background-attachment: fixed;
   box-sizing: border-box;
   margin:0;
   padding:0;
+}
 
+li {
+  list-style-type: none;
 }
 
 .container{
-
   display: block;
-    margin:100px;
+  margin:100px;
   /* border: 1px solid black; */
   flex-direction: row;
   flex-wrap: wrap;
@@ -29,86 +31,103 @@
   flex:1;
   flex-direction: column;
   font-family: 'Supermercado One', cursive;
-
-
-
 }
-  .one-row-one {
-  border: 5px solid white;
+
+.one-row-one {
+  /* border: 5px solid white; */
   /* width:auto; */
-  height: 35%;
   margin-bottom: 20px;
   margin-right: 20px;
   color: #3C3731;
   background:#F8F3F0 no-repeat fixed;
-
 }
 
 .one-row-one h1, .one-row-one h3, .one-row-one p{
-
   color: #3C3731;
   background:#F8F3F0 no-repeat fixed;
   display: block;
   font-size: 1em;
-  margin-bottom: 2em;
-  margin-left: 5em;
-  margin-right: 1em;
   font-weight: bold;
 }
 
 .one-row-one img{
   display: block;
   width: 30%;
-  height: 40%;
-
+  height: 30%;
 }
 
-  .one-row-two {
-    border: 5px solid white;
-    /* width:auto; */
-    height: 65%;
-    margin-right: 20px;
-    color: #3C3731;
-    background:#F8F3F0 no-repeat fixed;
+.one-row-one .top-container {
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+
+.one-row-one .bottom-container {
+  background-color: #3C3731;
+  color: white;
+  height: 100%;
+}
+
+.one-row-one .bottom-container ul {
+  display: flex; 
+  justify-content: space-around;
+}
+
+.one-row-one .bottom-container ul li {
+  height: 100%;
+  font-size: 2em; 
+  padding: 1em 0.25em;
+}
+
+.one-row-two {
+  border: 5px solid white;
+  /* width:auto; */
+  height: 65%;
+  margin-right: 20px;
+  color: #3C3731;
+  background:#F8F3F0 no-repeat fixed;
 }
 
 .one-row-two h1, img, p{
   color: #3C3731;
   background:#F8F3F0 no-repeat fixed;
-
-
 }
 
-  .two-row-one {
-
-  border: 5px solid white;
-  width:auto;
-  height: 30%;
+.two-row-one {
+  /* border: 5px solid white; */
+  /* width:auto; */
+  /* height: 30%; */
   margin-bottom: 50px;
   margin-right: 20px;
 }
 
 
-  .two-row-two {
-    width:auto;
-    height: 70%;
-    margin-right: 20px;
+.two-row-two {
+  width:auto;
+  margin-right: 20px;
+  color: #3C3731;
+  background:#F8F3F0;
+}
+
+.two-row-two .bottom-container {
+  height: 15em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: left; 
+}
+
+  .two-row-two h4 {
+    display: block;
+    font-size: .75em;
+    margin-top: 3em;
+    margin-bottom: .50em;
+    margin-left: 5em;
+    font-weight: bold;
     color: #3C3731;
     background:#F8F3F0 no-repeat fixed;
-}
-
-.two-row-two h4 {
-
-  display: block;
-  font-size: .75em;
-  margin-top: 3em;
-  margin-bottom: .50em;
-  margin-left: 1em;
-  margin-right: 3em;
-  font-weight: bold;
-  color: #3C3731;
-  background:#F8F3F0 no-repeat fixed;
-}
+  }
 
 
 img {
@@ -131,10 +150,6 @@ img {
 .three-row-one h1 {
   display: block;
   font-size: 5em;
-  margin-top: 1em;
-  margin-bottom: 0.67em;
-  margin-left: 2em;
-  margin-right: 0;
   font-weight: bold;
   color: #F8F3F0;
   background:#3C3731 no-repeat fixed;
@@ -237,6 +252,12 @@ and (min-device-width : 768px)
       margin:50px;
       height: auto;
       width: 90%;
+    }
+
+    .video {
+      width: 100%;
+      height: auto; 
+      object-fit: fill; 
     }
   }
 
